--- a/helm/harness/templates/pipeline-service.yaml
+++ b/helm/harness/templates/pipeline-service.yaml
@@ -170,6 +170,13 @@ spec:
           timeoutSeconds: 5
           periodSeconds: 10
           failureThreshold: 20
+        resources:
+          limits:
+            memory: 1320Mi
+            cpu: 1
+          requests:
+            memory: 576Mi
+            cpu: 200m
       volumes:
         - name: mongo-config
           secret:
