--- a/helm/harness/templates/manager.yaml
+++ b/helm/harness/templates/manager.yaml
@@ -158,6 +158,13 @@ spec:
             periodSeconds: 5
             successThreshold: 1
             timeoutSeconds: 1
+          resources:
+            limits:
+              memory: 1454Mi
+              cpu: 1
+            requests:
+              memory: 512Mi
+              cpu: 200m
       volumes:
         - name: mongo-config
           secret:
