--- a/helm/harness/templates/mongodb.yaml
+++ b/helm/harness/templates/mongodb.yaml
@@ -409,7 +409,7 @@ spec:
             - --bind_ip=0.0.0.0
             - --auth
             - --keyFile=/data/configdb/key.txt
-            - --wiredTigerCacheSizeGB=1
+            - --wiredTigerCacheSizeGB=0.375
           livenessProbe:
             exec:
               command:
@@ -439,6 +439,13 @@ spec:
               mountPath: /data/configdb
             - name: workdir
               mountPath: /work-dir
+          resources:
+            limits:
+              memory: 768Mi
+              cpu: 200m
+            requests:
+              memory: 512Mi
+              cpu: 200m
 
       volumes:
         - name: config
