--- a/helm/harness/templates/ng-ui.yaml
+++ b/helm/harness/templates/ng-ui.yaml
@@ -66,3 +66,10 @@ spec:
         envFrom:
         - configMapRef:
             name: ng-ui
+        resources:
+          limits:
+            memory: 32Mi
+            cpu: 200m
+          requests:
+            memory: 32Mi
+            cpu: 200m
