--- a/helm/harness/templates/platform-service.yaml
+++ b/helm/harness/templates/platform-service.yaml
@@ -121,6 +121,13 @@ spec:
           timeoutSeconds: 10
           periodSeconds: 10
           failureThreshold: 20
+        resources:
+          limits:
+            memory: 372Mi
+            cpu: 1
+          requests:
+            memory: 128Mi
+            cpu: 200m
       volumes:
         - name: mongo-config
           secret:
