--- a/helm/harness/templates/redis.yaml
+++ b/helm/harness/templates/redis.yaml
@@ -58,6 +58,13 @@ spec:
         volumeMounts:
         - mountPath: /data
           name: data
+        resources:
+          limits:
+            memory: 384Mi
+            cpu: 200m
+          requests:
+            memory: 128Mi
+            cpu: 200m
       volumes:
       - name: data
         emptyDir: {}
