--- a/helm/harness/templates/manager.yaml
+++ b/helm/harness/templates/manager.yaml
@@ -67,7 +67,7 @@ data:
   LOGGING_LEVEL: WARN
   LOG_STREAMING_SERVICE_BASEURL: http://{{ .Values.harness_host | default "host.docker.internal" }}:{{ .Values.listen_port }}/log-service/
   LOG_STREAMING_SERVICE_TOKEN: c76e567a-b341-404d-a8dd-d9738714eb82
-  MEMORY: '{{ .Values.manager.memory }}'
+  MEMORY: '{{ .Values.manager.config.memory }}'
   NG_MANAGER_BASE_URL: http://proxy/ng/api/
   ORCHESTRATION_NOTIFY_EVENT_LISTENER_COUNT: '1'
   PERPETUAL_TASK_ASSIGNMENT_ITERATOR_THREAD_COUNT: '2'
@@ -160,11 +160,11 @@ spec:
             timeoutSeconds: 1
           resources:
             limits:
-              memory: 1454Mi
-              cpu: 1
+              memory: {{ .Values.manager.resources.limits.memory }}
+              cpu: {{ .Values.manager.resources.limits.cpu }}
             requests:
-              memory: 512Mi
-              cpu: 200m
+              memory: {{ .Values.manager.resources.requests.memory }}
+              cpu: {{ .Values.manager.resources.requests.cpu }}
       volumes:
         - name: mongo-config
           secret:
