--- a/helm/harness/templates/mongodb.yaml
+++ b/helm/harness/templates/mongodb.yaml
@@ -409,7 +409,7 @@ spec:
             - --bind_ip=0.0.0.0
             - --auth
             - --keyFile=/data/configdb/key.txt
-            - --wiredTigerCacheSizeGB=0.375
+            - --wiredTigerCacheSizeGB={{ .Values.mongo.resources.requests.wiredTigerCacheSize }}
           livenessProbe:
             exec:
               command:
@@ -441,11 +441,11 @@ spec:
               mountPath: /work-dir
           resources:
             limits:
-              memory: 768Mi
-              cpu: 200m
+              memory: {{ .Values.mongo.resources.limits.memory }}
+              cpu: {{ .Values.mongo.resources.limits.cpu }}
             requests:
-              memory: 512Mi
-              cpu: 200m
+              memory: {{ .Values.mongo.resources.requests.memory }}
+              cpu: {{ .Values.mongo.resources.requests.cpu }}
 
       volumes:
         - name: config
@@ -471,4 +471,4 @@ spec:
           - "ReadWriteOnce"
         resources:
           requests:
-            storage: 10Gi
+            storage: {{ .Values.mongo.resources.requests.storage }}
