--- a/helm/harness/values-production.yaml
+++ b/helm/harness/values-production.yaml
@@ -18,7 +18,21 @@ ng_auth_ui:
 
 manager:
   config:
-    memory: 232
+    common_pool_core_size: 2
+    common_pool_max_size: 20
+    delegate_capabilities_record_iterator_thread_count: 4
+    delegate_task_expiry_check_iterator_thread_count: 4
+    deployment_event_listener_count: 2
+    deployment_time_series_event_listener_count: 2
+    events_framework_netty_threads: 2
+    event_delivery_iterator_thread_count: 4
+    execution_event_listener_count: 2
+    general_notify_event_listener_count: 2
+    memory: 512
+    orchestration_notify_event_listener_count: 2
+    perpetual_task_assignment_iterator_thread_count: 4
+    perpetual_task_rebalance_iterator_thread_count: 4
+    server_max_threads: 24
   resources:
     limits:
       memory: 1454Mi
@@ -29,7 +43,19 @@ manager:
 
 ng_manager:
   config:
-    memory: 232
+    common_pool_core_size: 2
+    common_pool_max_size: 10
+    events_framework_netty_threads: 2
+    git_fullsync_entity_iterator_thread_pool_size: 4
+    memory: 512
+    ng_vault_iterator_thread_pool_size: 4
+    pms_sdk_execution_pool_core_size: 2
+    pms_sdk_execution_pool_max_size: 4
+    pms_sdk_orchestration_event_pool_core_size: 2
+    pms_sdk_orchestration_event_pool_max_size: 4
+    redis_netty_threads: 2
+    server_max_threads: 32
+    webhook_event_processing_service_thread_size: 4
   resources:
     limits:
       memory: 1454Mi
@@ -40,7 +66,41 @@ ng_manager:
 
 pipeline:
   config:
-    memory: 200
+    advise_event_consumer_thread_count: 2
+    barrier_iterator_thread_pool_size: 4
+    common_pool_core_size: 2
+    common_pool_max_size: 10
+    create_plan_event_consumer_thread_count: 2
+    events_framework_netty_threads: 2
+    facilitate_event_consumer_thread_count: 2
+    graph_update_event_consumer_thread_count: 2
+    interrupt_consumer_thread_count: 2
+    interrupt_monitor_iterator_thread_pool_size: 4
+    memory: 576
+    node_start_event_consumer_thread_count: 2
+    orchestration_event_consumer_thread_count: 2
+    orchestration_pool_core_size: 2
+    orchestration_pool_max_size: 4
+    orchestration_visualization_pool_core_size: 2
+    orchestration_visualization_pool_max_size: 4
+    partial_plan_response_event_consumer_thread_count: 2
+    pipeline_execution_pool_core_size: 2
+    pipeline_execution_pool_max_size: 20
+    plan_notify_event_consumer_thread_count: 2
+    pms_notify_event_consumer_thread_count: 2
+    pms_sdk_execution_pool_core_size: 2
+    pms_sdk_execution_pool_max_size: 4
+    pms_sdk_orchestration_event_pool_core_size: 2
+    pms_sdk_orchestration_event_pool_max_size: 4
+    progress_event_consumer_thread_count: 2
+    redis_netty_threads: 2
+    resource_restraint_iterator_thread_pool_size: 4
+    resume_event_consumer_thread_count: 2
+    scheduled_trigger_iterator_thread_pool_size: 4
+    sdk_response_event_consumer_thread_count: 2
+    server_max_threads: 24
+    timeout_engine_iterator_thread_pool_size: 4
+    webhook_iterator_thread_pool_size: 4
   resources:
     limits:
       memory: 1320Mi
@@ -51,7 +111,12 @@ pipeline:
 
 platform:
   config:
-    memory: 60
+    common_pool_core_size: 2
+    common_pool_max_size: 4
+    events_framework_netty_threads: 2
+    memory: 128
+    redis_netty_threads: 2
+    server_max_threads: 24
   resources:
     limits:
       memory: 372Mi
