--- a/helm/harness/templates/log-service.yaml
+++ b/helm/harness/templates/log-service.yaml
@@ -15,16 +15,22 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: log-service
+  annotations:
+    {{- toYaml .Values.deployment.annotations | nindent 4 }}
   labels:
     app: log-service
+    {{- include "harness.deployment.labels" . | nindent 4 }}
 spec:
   selector:
     matchLabels:
       app: log-service
   template:
     metadata:
+      annotations:
+        {{- toYaml .Values.replica.annotations | nindent 8 }}
       labels:
         app: log-service
+        {{- include "harness.replica.labels" . | nindent 8 }}
     spec:
       serviceAccountName: harness-default
       containers:
