--- a/helm/harness/templates/proxy.yaml
+++ b/helm/harness/templates/proxy.yaml
@@ -198,14 +198,21 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: proxy
+  annotations:
+    {{- toYaml .Values.deployment.annotations | nindent 4 }}
+  labels:
+    {{- include "harness.deployment.labels" . | nindent 4 }}
 spec:
   selector:
     matchLabels:
       app: proxy
   template:
     metadata:
+      annotations:
+        {{- toYaml .Values.replica.annotations | nindent 8 }}
       labels:
         app: proxy
+        {{- include "harness.replica.labels" . | nindent 8 }}
     spec:
       serviceAccountName: harness-default
       initContainers:
