--- a/helm/harness/templates/scm-service.yaml
+++ b/helm/harness/templates/scm-service.yaml
@@ -15,14 +15,21 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: scm
+  annotations:
+    {{- toYaml .Values.deployment.annotations | nindent 4 }}
+  labels:
+    {{- include "harness.deployment.labels" . | nindent 4 }}
 spec:
   selector:
     matchLabels:
       app: scm
   template:
     metadata:
+      annotations:
+        {{- toYaml .Values.replica.annotations | nindent 8 }}
       labels:
         app: scm
+        {{- include "harness.replica.labels" . | nindent 8 }}
     spec:
       serviceAccountName: harness-default
       containers:
