support custom annotations and labels on services

--- a/helm/harness/templates/delegate-proxy.yaml
+++ b/helm/harness/templates/delegate-proxy.yaml
@@ -39,6 +39,10 @@ apiVersion: v1
 kind: Service
 metadata:
   name: delegate-proxy
+  annotations:
+    {{- toYaml .Values.service.annotations | nindent 4 }}
+  labels:
+    {{- include "harness.service.labels" . | nindent 4 }}
 spec:
   selector:
     app: delegate-proxy
