--- a/helm/harness/templates/platform-service.yaml
+++ b/helm/harness/templates/platform-service.yaml
@@ -54,6 +54,10 @@ apiVersion: v1
 kind: Service
 metadata:
   name: platform-service
+  annotations:
+    {{- toYaml .Values.service.annotations | nindent 4 }}
+  labels:
+    {{- include "harness.service.labels" . | nindent 4 }}
 spec:
   ports:
   - name: http
