--- a/helm/harness/templates/ng-ui.yaml
+++ b/helm/harness/templates/ng-ui.yaml
@@ -11,7 +11,10 @@ apiVersion: v1
 kind: Service
 metadata:
   name: ng-ui
+  annotations:
+    {{- toYaml .Values.service.annotations | nindent 4 }}
   labels:
+    {{- include "harness.service.labels" . | nindent 4 }}
 spec:
   ports:
   - name: http
