--- a/helm/harness/templates/redis.yaml
+++ b/helm/harness/templates/redis.yaml
@@ -11,8 +11,11 @@ apiVersion: v1
 kind: Service
 metadata:
   name: redis
+  annotations:
+    {{- toYaml .Values.service.annotations | nindent 4 }}
   labels:
     app: redis
+    {{- include "harness.service.labels" . | nindent 4 }}
 spec:
   selector:
     app: redis
