support custom annotations and labels on service account

--- a/helm/harness/templates/delegate-proxy.yaml
+++ b/helm/harness/templates/delegate-proxy.yaml
@@ -18,7 +18,7 @@ spec:
         app: delegate-proxy
         {{- include "harness.replica.labels" . | nindent 8 }}
     spec:
-      serviceAccountName: harness-default
+      serviceAccountName: {{ include "harness.serviceAccountName" }}
       securityContext:
         runAsUser: 101
       containers:
