--- a/helm/harness/templates/mongodb.yaml
+++ b/helm/harness/templates/mongodb.yaml
@@ -311,7 +311,7 @@ spec:
         app: mongodb-replicaset
         {{- include "harness.replica.labels" . | nindent 8 }}
     spec:
-      serviceAccountName: harness-default
+      serviceAccountName: {{ include "harness.serviceAccountName" }}
       securityContext:
         runAsUser: 999
         fsGroup: 999
